# pizh2311_kolesnikov

./: README.md  main.py
labwork1/: CMakeLists.txt  README.md  main.cpp  text.txt
labwork2/: README.md
labwork2/lib/: number.cpp  number.h
labwork3/: .gitignore  CMakeLists.txt  README.md  launch_main.bat  launch_tests.bat
labwork3/input/: main_input.tsv  test_input.tsv
labwork3/lib/: BmpWriter.cpp  BmpWriter.h  CMakeLists.txt  Sandpile.cpp  Sandpile.h
labwork3/tests/: CMakeLists.txt  tests.cpp
labwork5/: README.md
labwork5/lib/: ArgParser.cpp  ArgParser.h
labwork5/tests/: argparser_test.cpp
labwork6/: README.md
labwork6/lib/: parser.cpp  parser.h
labwork6/tests/: CMakeLists.txt  test_format.cpp  test_parser.cpp
labwork7/: README.md  launch_main.bat  launch_tests.bat
labwork7/lib/: CMakeLists.txt  MetaDecoder.cpp  MetaDecoder.h
labwork7/tests/: test_parser.cpp
labwork8/: README.md
labwork9/: CMakeLists.txt  README.md
labwork9/lib/: CMakeLists.txt  adapters.h
labwork9/tests/: test_adapters.cpp
lr-1-2/: README.md  main.py
lr-2-1/: README.md  main.py
lr-3-1/: README.md  main.py
lr-3-1 roman/: README.md
lr-4-2 pizza/: Order.py  Pizza.py  Terminal.py  main.py
lr-4-3 bank/: README.md  deposit.py  main.py
lr-4-4 segment/: README.md  abstract_linesegment.py  main.py
lr-4-5 collection/: README.md  abstract_linesegment.py  line_segment_collection.py  main.py
lr-4-6 pencil/: README.md  main.py  writing_instruments.py
the_snake-main/: README.md  the_snake.py
